<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/bg_register"
    tools:content=".activity.AboutPageActivity">

    <TextView
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:text="@string/about_btn"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <TextView android:text="@string/about_1"
        android:layout_width="wrap_content"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:id="@+id/about1"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="140dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_2"
        android:textColor="@color/white"
        android:layout_marginTop="28dp"
        android:layout_below="@+id/about1"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:id="@+id/about2" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:text="@string/about_3"
        android:textColor="@color/white"
        android:layout_marginTop="28dp"
        android:layout_below="@+id/about2"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"/>

</RelativeLayout>