<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".activity.ClientActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Client Form"
            android:textSize="30sp"
            android:gravity="center_horizontal"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/colorPrimary"
            android:layout_margin="20dp"
            android:textColorHint="@color/colorPrimary"
            android:hint="@string/applicant_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/applicant_name"/>
        </com.google.android.material.textfield.TextInputLayout>
<!--
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/department">

            <AutoCompleteTextView
                android:id="@+id/departmentList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"/>

        </com.google.android.material.textfield.TextInputLayout>-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/colorPrimary"
            android:layout_margin="20dp"
            android:textColorHint="@color/colorPrimary"
            android:hint="@string/position"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <Spinner
                android:id="@+id/deptList2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/colorPrimary"
            android:layout_margin="20dp"
            android:textColorHint="@color/colorPrimary"
            android:hint="@string/position"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/position"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--<com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/problemSpecs">
            <AutoCompleteTextView
                android:id="@+id/prob_spec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"/>
        </com.google.android.material.textfield.TextInputLayout>-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/colorPrimary"
            android:layout_margin="20dp"
            android:textColorHint="@color/colorPrimary"
            android:hint="@string/problemSpecs"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >
            <Spinner
                android:id="@+id/probSpec2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/colorPrimary"
            android:layout_margin="20dp"
            android:padding="0dp"
            android:textColorHint="@color/colorPrimary"
            android:hint="@string/problemDetails"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="120dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:id="@+id/problemDetails"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/saveReport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/rounded_button_primary"
            android:text="@string/save_btn"
            android:textColor="@color/white" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:id="@+id/viewReport"
            android:text="@string/view_btn"
            android:background="@drawable/rounded_button_primary"
            android:textColor="@color/white"/>
    </LinearLayout>
</ScrollView>